# sae-cooccur

./: .gitignore  README.md  cooccur.py  cossim_ppmi.ipynb  latents.py  latents_gpt2.py  latents_pythia.py  mmcs.py  ppmi.py  pyproject.toml  similar.py
mats/: data.py  sae.py  tokenizer.py  transformer.py
sae_cooccur/: data.py  sae.py
