[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sae_cooccur"
requires-python = ">=3.10"
license = { text = "MIT License" }
dependencies = [
  "accelerate",
  "datasets",
  "einops",
  "huggingface-hub",
  "pandas",
  "ruff>=0.8.2",
  "sae-lens>=5.2.0",
  "sae@git+https://github.com/tim-lawson/sae@timl/load-cfg",
  "safetensors",
  "seaborn",
  "simple-parsing",
  "torch",
  "transformers",
]
version = "0.1.0"

[tool.pyright]
include = ["sae_cooccur*"]
reportPrivateImportUsage = false

[tool.setuptools.packages.find]
include = ["sae_cooccur*"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
ignore = ["F722", "F821", "UP037"]
select = ["E", "F", "UP", "B", "SIM", "I"]
